--- a/ADM/app/index.html
+++ b/ADM/app/index.html
@@ -112,8 +112,7 @@
             <section class="paragraph">
                <div class="container">
                   <div class="paragraph__inner">
-                     <h1 class="paragraph__title">Разработка наукоемких технологий в области 
-                        порошковой металлургии
+                     <h1 class="paragraph__title">Разработка наукоемких технологий в области порошковой металлургии
                      </h1>
                      <p class="paragraph__descr">Композит является научно-инженерным центром, оказывающим услуги в области разработки и внедрения наукоемких технологий 
                         порошковой металлургии и производства технических изделий по ним.
@@ -177,7 +176,7 @@
                                  <div class="production__background"></div>
                               </div>
                               <div class="production__item-content production__item-content--4">
-                                 <h3 class="production__item-title production__item-title--3">
+                                 <h3 class="production__item-title production__item-title--5">
                                     Изделия из конструкционных материалов
                                  </h3>
                                  <a class="production__item-btn" href="#">Подробнее</a>
@@ -293,10 +292,10 @@
             <div class="container">
                <div class="footer__inner">
 
-                  <div class="footer__item">
+                  <div class="footer__item footer__item--1">
                      <div class="footer__item-content-big">
                         <div class="logotype">
-                           <a class="logotype__link" href="#">KOMPOZIT</a>
+                           <a class="logotype__link footer-logotype__link" href="#">KOMPOZIT</a>
                            <span class="logotype__descr">Scientific and production enterprise</span>
                         </div>
                         <div class="footer__socials">
@@ -332,7 +331,7 @@
                         <a class="footer__link" href="#">Продукция</a>
                      </div>
                   </div>
-                  <div class="footer__item">
+                  <div class="footer__item footer__item--2">
                      <div class="footer__item-content-big">
                         <div class="footer__item-content-links">
                            <a class="footer__link" href="#">порошковая металлургия</a>
