--- a/ADM/app/index.html
+++ b/ADM/app/index.html
@@ -121,7 +121,7 @@
                </div>
             </section>
 
-            <section class="production"> <!--  id="production" -->
+            <section class="production" id="production">
                <div class="container">
                   <h2 class="production__title">Наша продукция</h2>
                   <div class="production__inner">
