--- a/ADM/app/index.html
+++ b/ADM/app/index.html
@@ -210,7 +210,7 @@
                      <div class="benefits__row">
                         <div class="benefits__item">
                            <div class="benefits__image-container">
-                              <img class="benefits__image" src="images/preim-1.svg" alt="">
+                              <img class="benefits__image" src="images/Партии.svg" alt="">
                            </div>
                            <p class="benefits__text">Принимаем заказы
                               от 1 детали до
@@ -219,7 +219,7 @@
                         </div>
                         <div class="benefits__item">
                            <div class="benefits__image-container">
-                              <img class="benefits__image" src="images/preim-4.svg" alt="">
+                              <img class="benefits__image" src="images/Размер.svg" alt="">
                            </div>
                            <p class="benefits__text">Вес изделий
                               от 2 гр до 2500 гр
@@ -227,7 +227,7 @@
                         </div>
                         <div class="benefits__item">
                            <div class="benefits__image-container">
-                              <img class="benefits__image" src="images/preim-3.svg" alt="">
+                              <img class="benefits__image" src="images/Чертежи.svg" alt="">
                            </div>
                            <p class="benefits__text">Собственный отдел
                               разработок и исследований
@@ -235,7 +235,7 @@
                         </div>
                         <div class="benefits__item">
                            <div class="benefits__image-container">
-                              <img class="benefits__image" src="images/preim-2.svg" alt="">
+                              <img class="benefits__image" src="images/Материалы.svg" alt="">
                            </div>
                            <p class="benefits__text">Высококачественное 
                               сырье российского 
@@ -256,22 +256,22 @@
                      <div class="customers__container swiper-container2">
                         <div class="customers__wrapper swiper-wrapper">
                            <div class="customers__item swiper-slide">
-                              <img class="customers__item-img" src="images/customers/1.webp" alt="">
+                              <a class="customers__link-image customers__link-image--1" href="#"></a>
                            </div>
                            <div class="customers__item swiper-slide">
-                              <img class="customers__item-img" src="images/customers/2.webp" alt="">
+                              <a class="customers__link-image customers__link-image--2" href="#"></a>
                            </div>
                            <div class="customers__item swiper-slide">
-                              <img class="customers__item-img" src="images/customers/3.webp" alt="">
+                              <a class="customers__link-image customers__link-image--3" href="#"></a>
                            </div>
                            <div class="customers__item swiper-slide">
-                              <img class="customers__item-img" src="images/customers/4.webp" alt="">
+                              <a class="customers__link-image customers__link-image--4" href="#"></a>
                            </div>
                            <div class="customers__item swiper-slide">
-                              <img class="customers__item-img" src="images/customers/5.webp" alt="">
+                              <a class="customers__link-image customers__link-image--5" href="#"></a>
                            </div>
                            <div class="customers__item swiper-slide">
-                              <img class="customers__item-img" src="images/customers/6.webp" alt="">
+                              <a class="customers__link-image customers__link-image--6" href="#"></a>
                            </div>
                         </div>
                         <div class="customers__arrows swiper-arrows">
